display artwork in rect in the map
